# roboteam_proto

./: CMakeLists.txt
include/roboteam_proto/: Channels.h  Publisher.h  Subscriber.h
proto/: InterfaceUpdate.proto  JoystickData.proto  ObserverSettings.proto  Robot.proto  RobotCommand.proto  RobotFeedback.proto  RobotHubSettings.proto  RobotsUpdate.proto  Setting.proto  State.proto  UiMessage.proto  UiOptions.proto  World.proto  draw_call.proto  ssl_gc_common.proto  ssl_simulation_config.proto  ssl_simulation_control.proto  ssl_simulation_error.proto  ssl_simulation_robot_control.proto  ssl_simulation_robot_feedback.proto  ssl_simulation_synchronous.proto
src/: Channels.cpp
